force-app/main/default/objects/Partner_Incentive_Claim__c/Partner_Incentive_Claim__c.object-meta.xml
<CustomObject>
    <label>Partner Incentive Claim</label>
    <pluralLabel>Partner Incentive Claims</pluralLabel>
    <nameField>
        <displayFormat>PIC-{00000000}</displayFormat>
        <label>Partner Incentive Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>