force-app/main/default/objects/Partner_Incentive_Claim__c/fields/Claim_Reason__c.field-meta.xml
<CustomField>
    <fullName>Claim_Reason__c</fullName>
    <label>Claim Reason</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>