force-app/main/default/objects/Partner_Incentive_Claim__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <length>40</length>
    <type>Text</type>
</CustomField>