force-app/main/default/objects/Partner_Incentive_Claim__c/fields/Evidence_Status__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Status__c</fullName>
    <label>Evidence Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>