force-app/main/default/objects/Partner_Incentive_Claim__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <label>Reviewed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Reviewed Incentive Claims</relationshipLabel>
    <relationshipName>Reviewed_Incentive_Claims</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>