force-app/main/default/objects/Partner_Incentive_Claim__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <label>Submitted By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Submitted Incentive Claims</relationshipLabel>
    <relationshipName>Submitted_Incentive_Claims</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>